Fix dark mode text base color.

--- a/packages/components/src/themes/base.css
+++ b/packages/components/src/themes/base.css
@@ -312,6 +312,7 @@ sc-checkout [hidden] {
 }
 
 .surecart-theme-dark {
+  color: var(--sc-color-white);
   /** Let's make these less blue for basic dark mode **/
   --sc-color-gray-50: var(--sc-color-neutral-50);
   --sc-color-gray-100: var(--sc-color-neutral-100);
